--- a/src/main.scss
+++ b/src/main.scss
@@ -70,6 +70,6 @@ $info: #050593;
     #arch{
       color:#0CE5F8;
       font-size: 6px;
-      line-height: 1px;
+      // line-height: 1px;
     }
   }
