--- a/src/main.css
+++ b/src/main.css
@@ -12786,4 +12786,25 @@ textarea.form-control-lg {
     color: #0CE5F8;
     font-size: 6px;
   }
+}
+@font-face {
+  font-family: "slkcrb";
+  src: url("../silkscreen/slkscre.ttf") format("truetype");
+}
+#retro {
+  font-family: "slkcrb", sans-serif;
+  letter-spacing: -1px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.center-image-container {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  height: 150px;
 }/*# sourceMappingURL=main.css.map */
