--- a/src/main.css
+++ b/src/main.css
@@ -12779,12 +12779,24 @@ textarea.form-control-lg {
 
 #arch {
   color: #0CE5F8;
+  font-size: 14px;
 }
 
 @media screen and (max-width: 810px) {
   #arch {
     color: #0CE5F8;
     font-size: 6px;
+    padding-top: 50%;
+  }
+  #retro1 {
+    font-size: 13px;
+    padding-top: 50%;
+  }
+  #retro2 {
+    font-family: "slkcrb", sans-serif;
+    letter-spacing: -1px;
+    font-size: 13px;
+    padding-left: 25%;
   }
 }
 @font-face {
@@ -12796,6 +12808,18 @@ textarea.form-control-lg {
   letter-spacing: -1px;
 }
 
+@media screen and (min-width: 811px) {
+  #retro1 {
+    font-family: "slkcrb", sans-serif;
+    letter-spacing: -1px;
+    padding-top: 15%; /* For screens > 810px */
+  }
+  #retro2 {
+    font-family: "slkcrb", sans-serif;
+    letter-spacing: -1px;
+    padding-left: 160px;
+  }
+}
 * {
   margin: 0;
   padding: 0;
