--- a/src/main.scss
+++ b/src/main.scss
@@ -64,13 +64,25 @@ $info: #050593;
   
   #arch{
     color:#0CE5F8;
+    font-size: 14px;
   }
   
   @media screen and (max-width: 810px){
     #arch{
       color:#0CE5F8;
       font-size: 6px;
+      padding-top: 50%;
       // line-height: 1px;
+    }
+    #retro1{
+      font-size: 13px;
+      padding-top: 50%;
+    }
+    #retro2{
+      font-family: "slkcrb", sans-serif;
+      letter-spacing: -1px;
+      font-size: 13px;
+      padding-left: 25%;
     }
   }
 
@@ -83,6 +95,21 @@ $info: #050593;
     font-family: "slkcrb", sans-serif;
     letter-spacing: -1px;
   }
+
+  @media screen and (min-width: 811px) {
+    #retro1 {
+      font-family: "slkcrb", sans-serif;
+      letter-spacing: -1px;
+      padding-top: 15%; /* For screens > 810px */
+    }
+    #retro2{
+      font-family: "slkcrb", sans-serif;
+      letter-spacing: -1px;
+      padding-left: 160px;
+    }
+  }
+  
+
 
   * {
     margin: 0;
