--- a/src/main.css
+++ b/src/main.css
@@ -12831,4 +12831,34 @@ textarea.form-control-lg {
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   height: 150px;
+}
+
+.cursor {
+  position: relative;
+}
+
+.cursor i {
+  position: absolute;
+  width: 10px;
+  height: 80%;
+  background-color: white;
+  right: 10px;
+  top: 10%;
+  animation-name: blink;
+  animation-duration: 1500ms;
+  animation-iteration-count: infinite;
+  opacity: 1;
+}
+
+.cursor input:focus + i {
+  display: none;
+}
+
+@keyframes blink {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }/*# sourceMappingURL=main.css.map */
