--- a/src/main.scss
+++ b/src/main.scss
@@ -122,3 +122,28 @@ $info: #050593;
   align-items: center; /* Center vertically */
   height: 150px;
 }
+
+.cursor {
+  position: relative;
+}
+.cursor i {
+  position: absolute;
+  width: 10px;
+  height: 80%;
+  background-color: white;
+  right: 10px;
+  top: 10%;
+  animation-name: blink;
+  animation-duration: 1500ms;
+  animation-iteration-count: infinite;
+  opacity: 1;
+}
+
+.cursor input:focus + i {
+  display: none;
+}
+
+@keyframes blink {
+  from { opacity: 1; }
+  to { opacity: 0; }
+}
