--- a/src/main.css
+++ b/src/main.css
@@ -12789,6 +12789,7 @@ textarea.form-control-lg {
     padding-top: 50%;
   }
   #retro1 {
+    font-family: "slkcrb", sans-serif;
     font-size: 13px;
     padding-top: 50%;
   }
