--- a/src/main.scss
+++ b/src/main.scss
@@ -75,6 +75,7 @@ $info: #050593;
       // line-height: 1px;
     }
     #retro1{
+      font-family: "slkcrb", sans-serif;
       font-size: 13px;
       padding-top: 50%;
     }
