--- a/src/main.scss
+++ b/src/main.scss
@@ -85,6 +85,18 @@ $info: #050593;
       font-size: 13px;
       padding-left: 25%;
     }
+
+    #retroj1{
+      font-family: "jp", sans-serif;
+      font-size: 13px;
+      padding-top: 50%;
+    }
+    #retroj2{
+      font-family: "jp", sans-serif;
+      letter-spacing: -1px;
+      font-size: 13px;
+      padding-left: 25%;
+    }
   }
 
   @font-face {
@@ -92,8 +104,18 @@ $info: #050593;
     src: url("../silkscreen/slkscre.ttf") format("truetype");
   }
 
+  @font-face {
+    font-family:"jp";
+    src: url("../NineteenNinetyThree-L1Ay.ttf") format("truetype");
+  }
+
   #retro{
     font-family: "slkcrb", sans-serif;
+    letter-spacing: -1px;
+  }
+
+  #retroj{
+    font-family: "jp", sans-serif;
     letter-spacing: -1px;
   }
 
@@ -107,6 +129,16 @@ $info: #050593;
       font-family: "slkcrb", sans-serif;
       letter-spacing: -1px;
       padding-left: 160px;
+    }
+    #retroj1 {
+      font-family: "jp", sans-serif;
+      letter-spacing: -1px;
+      padding-top: 15%; /* For screens > 810px */
+    }
+    #retroj2{
+      font-family: "jp", sans-serif;
+      letter-spacing: -1px;
+      padding-left: 100px;
     }
   }
   
@@ -132,7 +164,7 @@ $info: #050593;
   width: 10px;
   height: 80%;
   background-color: white;
-  right: 10px;
+  right: 10%;
   top: 10%;
   animation-name: blink;
   animation-duration: 1500ms;
