--- a/src/main.scss
+++ b/src/main.scss
@@ -87,12 +87,23 @@ $info: #050593;
     }
 
     #retroj1{
-      font-family: "jp", sans-serif;
+      font-family: "jp", "cn";
       font-size: 13px;
       padding-top: 50%;
     }
     #retroj2{
-      font-family: "jp", sans-serif;
+      font-family: "jp", "cn";
+      letter-spacing: -1px;
+      font-size: 13px;
+      padding-left: 25%;
+    }
+    #retroc1{
+      font-family: "cn", sans-serif;
+      font-size: 13px;
+      padding-top: 50%;
+    }
+    #retroc2{
+      font-family: "cn", sans-serif;
       letter-spacing: -1px;
       font-size: 13px;
       padding-left: 25%;
@@ -109,13 +120,22 @@ $info: #050593;
     src: url("../NineteenNinetyThree-L1Ay.ttf") format("truetype");
   }
 
+  @font-face {
+    font-family:"cn";
+    src: url("../Unifontexmono-AL3RA.ttf") format("truetype");
+  }
+
   #retro{
     font-family: "slkcrb", sans-serif;
     letter-spacing: -1px;
   }
 
   #retroj{
-    font-family: "jp", sans-serif;
+    font-family: "jp", "cn";
+    letter-spacing: -1px;
+  }
+  #retroc{
+    font-family: "cn", sans-serif;
     letter-spacing: -1px;
   }
 
@@ -131,12 +151,22 @@ $info: #050593;
       padding-left: 160px;
     }
     #retroj1 {
-      font-family: "jp", sans-serif;
+      font-family: "jp", "cn";
       letter-spacing: -1px;
       padding-top: 15%; /* For screens > 810px */
     }
     #retroj2{
-      font-family: "jp", sans-serif;
+      font-family: "jp", "cn";
+      letter-spacing: -1px;
+      padding-left: 100px;
+    }
+    #retroc1 {
+      font-family: "cn", sans-serif;
+      letter-spacing: -1px;
+      padding-top: 15%; /* For screens > 810px */
+    }
+    #retroc2{
+      font-family: "cn", sans-serif;
       letter-spacing: -1px;
       padding-left: 100px;
     }
