--- a/src/main.css
+++ b/src/main.css
@@ -12922,4 +12922,18 @@ textarea.form-control-lg {
   to {
     opacity: 0;
   }
+}
+.exp-bar {
+  width: 300px;
+  height: 20px;
+  background-color: #ccc;
+  border: 2px solid #333;
+  margin: 20px;
+}
+
+#exp-progress {
+  width: 10%;
+  height: 100%;
+  background-color: #00cc00;
+  transition: width 0.5s;
 }/*# sourceMappingURL=main.css.map */
