--- a/src/main.scss
+++ b/src/main.scss
@@ -210,3 +210,19 @@ $info: #050593;
   from { opacity: 1; }
   to { opacity: 0; }
 }
+
+
+.exp-bar {
+  width: 300px;
+  height: 20px;
+  background-color: #ccc;
+  border: 2px solid #333;
+  margin: 20px;
+}
+
+#exp-progress {
+  width: 10%;
+  height: 100%;
+  background-color: #00cc00;
+  transition: width 0.5s;
+}
