--- a/src/main.scss
+++ b/src/main.scss
@@ -233,3 +233,12 @@ $info: #050593;
   
   border: none; /* Remove any border if present */
 }
+
+.back-to-top-button {
+  // background-image: url('/img/btn_menu_bg.png');
+  position: fixed;
+  right: 0.42rem;
+  bottom: 1rem;
+  z-index: 1030;
+  // opacity: 0.7;
+}
