--- a/src/main.css
+++ b/src/main.css
@@ -12738,7 +12738,13 @@ textarea.form-control-lg {
 }
 
 .video-container {
-  height: 200px; /* Set the desired height here */
+  height: 75%;
+  width: 63%;
+  /* Set the desired height here */
+  padding-top: 9%;
+  padding-left: auto;
+  padding-right: auto;
+  justify-content: center;
   overflow: hidden;
 }
 
