--- a/src/main.css
+++ b/src/main.css
@@ -12855,6 +12855,18 @@ textarea.form-control-lg {
   letter-spacing: -1px;
 }
 
+@media screen and (min-wdith: 1800px) {
+  .video-container {
+    height: 80%;
+    width: 63%;
+    /* Set the desired height here */
+    padding-top: 15%;
+    padding-left: auto;
+    padding-right: auto;
+    justify-content: center;
+    overflow: hidden;
+  }
+}
 @media screen and (min-width: 811px) {
   #retro1 {
     font-family: "slkcrb", sans-serif;
