--- a/src/main.css
+++ b/src/main.css
@@ -12741,7 +12741,7 @@ textarea.form-control-lg {
   height: 75%;
   width: 63%;
   /* Set the desired height here */
-  padding-top: 15%;
+  padding-top: 14%;
   padding-left: auto;
   padding-right: auto;
   justify-content: center;
@@ -12855,7 +12855,7 @@ textarea.form-control-lg {
   letter-spacing: -1px;
 }
 
-@media screen and (min-wdith: 1700px) {
+@media screen and (min-width: 1700px) {
   .video-container {
     height: 80%;
     width: 63%;
