--- a/src/main.scss
+++ b/src/main.scss
@@ -32,7 +32,7 @@ $info: #050593;
     height: 75%;
     width: 63%;
      /* Set the desired height here */
-    padding-top: 15%;
+    padding-top: 14%;
     padding-left: auto;
     padding-right: auto;
     justify-content: center;
@@ -145,7 +145,7 @@ $info: #050593;
     font-family: "cn", sans-serif;
     letter-spacing: -1px;
   }
-  @media screen and (min-wdith: 1700px){
+  @media screen and (min-width: 1700px){
     .video-container {
     
       height: 80%;
