--- a/src/main.scss
+++ b/src/main.scss
@@ -29,11 +29,11 @@ $info: #050593;
   
   .video-container {
     
-    height: 75%;
+    height: 74%;
     width: 63%;
      /* Set the desired height here */
-    padding-top: 13%;
-    padding-left: auto;
+    padding-top: 14%;
+    padding-left: 1%;
     padding-right: auto;
     justify-content: center;
     overflow: hidden;
@@ -145,13 +145,13 @@ $info: #050593;
     font-family: "cn", sans-serif;
     letter-spacing: -1px;
   }
-  @media screen and (min-width: 1700px){
+  @media screen and (min-width: 1900px){
     .video-container {
     
       height: 80%;
       width: 63%;
        /* Set the desired height here */
-      padding-top: 12%;
+      padding-top: 15%;
       padding-left: auto;
       padding-right: auto;
       justify-content: center;
