--- a/src/main.scss
+++ b/src/main.scss
@@ -145,19 +145,19 @@ $info: #050593;
     font-family: "cn", sans-serif;
     letter-spacing: -1px;
   }
-  @media screen and (min-width: 1900px){
-    .video-container {
+  // @media screen and (min-width: 1900px){
+  //   .video-container {
     
-      height: 80%;
-      width: 63%;
-       /* Set the desired height here */
-      padding-top: 15%;
-      padding-left: auto;
-      padding-right: auto;
-      justify-content: center;
-      overflow: hidden;
-    }
-  }
+  //     height: 80%;
+  //     width: 63%;
+  //      /* Set the desired height here */
+  //     padding-top: 15%;
+  //     padding-left: auto;
+  //     padding-right: auto;
+  //     justify-content: center;
+  //     overflow: hidden;
+  //   }
+  // }
   @media screen and (min-width: 811px) {
     #retro1 {
       font-family: "slkcrb", sans-serif;
