--- a/src/main.scss
+++ b/src/main.scss
@@ -207,31 +207,37 @@ $info: #050593;
     #retro1 {
       font-family: "slkcrb", sans-serif;
       letter-spacing: -1px;
+      font-size: 20px;
       padding-top: 15%; /* For screens > 810px */
     }
     #retro2{
       font-family: "slkcrb", sans-serif;
       letter-spacing: -1px;
+      font-size: 20px;
       padding-left: 160px;
     }
     #retroj1 {
       font-family: "jp", "cn";
       letter-spacing: -1px;
+      font-size: 20px;
       padding-top: 15%; /* For screens > 810px */
     }
     #retroj2{
       font-family: "jp", "cn";
       letter-spacing: -1px;
+      font-size: 20px;
       padding-left: 100px;
     }
     #retroc1 {
       font-family: "cn", sans-serif;
       letter-spacing: -1px;
+      font-size: 20px;
       padding-top: 15%; /* For screens > 810px */
     }
     #retroc2{
       font-family: "cn", sans-serif;
       letter-spacing: -1px;
+      font-size: 20px;
       padding-left: 100px;
     }
   }
