--- a/src/main.css
+++ b/src/main.css
@@ -12913,31 +12913,37 @@ textarea.form-control-lg {
   #retro1 {
     font-family: "slkcrb", sans-serif;
     letter-spacing: -1px;
+    font-size: 20px;
     padding-top: 15%; /* For screens > 810px */
   }
   #retro2 {
     font-family: "slkcrb", sans-serif;
     letter-spacing: -1px;
+    font-size: 20px;
     padding-left: 160px;
   }
   #retroj1 {
     font-family: "jp", "cn";
     letter-spacing: -1px;
+    font-size: 20px;
     padding-top: 15%; /* For screens > 810px */
   }
   #retroj2 {
     font-family: "jp", "cn";
     letter-spacing: -1px;
+    font-size: 20px;
     padding-left: 100px;
   }
   #retroc1 {
     font-family: "cn", sans-serif;
     letter-spacing: -1px;
+    font-size: 20px;
     padding-top: 15%; /* For screens > 810px */
   }
   #retroc2 {
     font-family: "cn", sans-serif;
     letter-spacing: -1px;
+    font-size: 20px;
     padding-left: 100px;
   }
 }
