--- a/src/main.css
+++ b/src/main.css
@@ -12843,11 +12843,11 @@ textarea.form-control-lg {
 }
 @font-face {
   font-family: "jp";
-  src: url("../NineteenNinetyThree-L1Ay.ttf") format("truetype");
+  src: url("../pc-9800.ttf") format("truetype");
 }
 @font-face {
   font-family: "cn";
-  src: url("../Unifontexmono-AL3RA.ttf") format("truetype");
+  src: url("../pc-9800.ttf") format("truetype");
 }
 #retro {
   font-family: "slkcrb", sans-serif;
