--- a/src/main.css
+++ b/src/main.css
@@ -12917,6 +12917,17 @@ textarea.form-control-lg {
     font-size: 20px;
     padding-left: 25%;
   }
+  #retrok1 {
+    font-family: "kr", sans-serif;
+    font-size: 20px;
+    padding-top: 50%;
+  }
+  #retrok2 {
+    font-family: "kr", sans-serif;
+    letter-spacing: -1px;
+    font-size: 20px;
+    padding-left: 25%;
+  }
 }
 @media screen and (min-width: 811px) {
   #retro1 {
@@ -12951,6 +12962,18 @@ textarea.form-control-lg {
   }
   #retroc2 {
     font-family: "cn", sans-serif;
+    letter-spacing: -1px;
+    font-size: 20px;
+    padding-left: 100px;
+  }
+  #retrok1 {
+    font-family: "kr", sans-serif;
+    letter-spacing: -1px;
+    font-size: 20px;
+    padding-top: 15%; /* For screens > 810px */
+  }
+  #retrok2 {
+    font-family: "kr", sans-serif;
     letter-spacing: -1px;
     font-size: 20px;
     padding-left: 100px;
